<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#2a97f4"
    android:orientation="vertical">

    <TextView
           android:id="@+id/tx1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:text="@string/title"
           android:gravity="center"
           android:textColor="#ffffff"
           android:textSize="20sp" />

    <ImageButton
        android:layout_marginTop="15dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/materal_loan2"/>

    <Button
        android:id="@+id/btnver"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Nuevo_registro"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColorHint="#ffffff"
        android:layout_marginTop="10dp"
        android:background="#ff0d47a0" />

    <Button
        android:id="@+id/bntcons"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Consulta"
        android:layout_gravity="center_horizontal"
        android:textColorHint="#ffffff"
        android:layout_marginTop="30dp"
        android:background="#ff0d47a0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tx2"
        android:text="@string/profe"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"/>
</LinearLayout>
